[package]
name = "groestlcoin_slices"
version = "0.7.0"
edition = "2021"
authors = ["Groestlcoin Developers <developers@groestlcoin.org>"]
description = "Parse Groestlcoin objects without allocations"
repository = "https://github.com/Groestlcoin/groestlcoin_slices"
documentation = "https://docs.rs/groestlcoin_slices/"
keywords = ["groestlcoin", "blocks", "transaction", "parse", "slices"]
categories = ["no-std", "cryptography::cryptocurrencies", "encoding"]
readme = "README.md"
license = "MIT"

[dependencies]
groestlcoin_hashes = { version = "0.13", optional = true }
sha2 = { version = "0.10", optional = true }
groestlcoin = { version = "0.31.0", optional = true }
redb = { version = "1.0", optional = true }
hashbrown = { version = "0.14", optional = true }

[features]
default = []
groestlcoin_hashes = ["dep:groestlcoin_hashes"]
sha2 = ["dep:sha2"]
redb = ["dep:redb"]
groestlcoin = ["dep:groestlcoin", "groestlcoin_hashes"]
slice_cache = ["dep:hashbrown"]

[dev-dependencies]
hex_lit = { version = "0.1", features = ["rust_v_1_46"] }
groestlcoin = { version = "0.31.0", features = ["rand"] }
bitcoin-test-data = "0.2.0"
tempfile = "3.4.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
